<resources>
    <string name="app_name">PizzaOrder</string>
    <string name="round_pizza">Tis a Round\'a Pizza</string>
    <string name="button_round">Round</string>
    <string name="button_square">Square</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="place_order">Place Order</string>

    <string name="ingredients">Ingredients :</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="veggies">Veggies</string>
    <string name="anchovies">Anchovies</string>
    <string name="no_cheese">No Cheese</string>
    <string name="cheese">Cheese</string>
    <string name="double_cheese">2x Cheese</string>

</resources>
